--- a/package.json
+++ b/package.json
@@ -9,7 +9,11 @@
     "react-scripts": "5.0.1"
   },
   "devDependencies": {
-    "gh-pages": "^6.3.0"
+    "@types/node": "^24.5.2",
+    "@types/react": "^19.1.13",
+    "@types/react-dom": "^19.1.9",
+    "gh-pages": "^6.3.0",
+    "typescript": "^5.9.2"
   },
   "scripts": {
     "start": "react-scripts start",
