--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -32,6 +32,9 @@ jobs:
       - name: Install dependencies
         run: npm ci
         
+      - name: Type check
+        run: npx tsc --noEmit
+        
       - name: Build project
         run: npm run build
         
