--- a/package.json
+++ b/package.json
@@ -5,8 +5,11 @@
   "private": true,
   "dependencies": {
     "@types/react-router-dom": "^5.3.3",
+    "ml-matrix": "^6.12.1",
+    "plotly.js": "^3.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-plotly.js": "^2.6.0",
     "react-router-dom": "^7.9.1",
     "react-scripts": "5.0.1"
   },
@@ -14,6 +17,7 @@
     "@types/node": "^24.5.2",
     "@types/react": "^19.1.13",
     "@types/react-dom": "^19.1.9",
+    "@types/react-plotly.js": "^2.6.3",
     "gh-pages": "^6.3.0",
     "typescript": "^4.9.5"
   },
